--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ ol, ul {
   padding: 0;
   text-align: center;
   width: 34px;
+  position: relative;
 }
 
 .square:focus {
@@ -47,4 +48,66 @@ ol, ul {
 
 .game-info {
   margin-left: 20px;
+    min-width: 180px;
+}
+.horizontal .horizontal-line{
+
+	display: inline-block;
+	width: 100%;
+    height: 5%;
+    transform: rotate(0deg);
+    background: #9E9E9E;
+    position: absolute;
+    top: 48%;
+    left: 0;
+}
+.vertical .vertical-line{
+
+	display: inline-block;
+	width: 100%;
+    height: 5%;
+    transform: rotate(90deg);
+    background: #9E9E9E;
+    position: absolute;
+    top: 48%;
+    left: 0;
+}
+.diagonal1 .diagonal1-line{
+
+	    display: inline-block;
+    width: 145%;
+    height: 5%;
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    background: #9E9E9E;
+    position: absolute;
+    top: 45%;
+    left: -25%;
+    z-index: 10;
+}
+.diagonal2 .diagonal2-line{
+
+	display: inline-block;
+    width: 145%;
+    height: 5%;
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg);
+    background: #9E9E9E;
+    position: absolute;
+    top: 45%;
+    left: -25%;
+    z-index: 10;
+}
+.square .player-x{
+	background:#000;
+	color:#e26e6e
+}
+.square .player-o{
+	background:#000;
+	color:azure
+}
+.square .blocked{
+	background:#000;
+	color:#fff;
+	cursor:not-allowed
 }
